--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html {
 body {
   margin: 0;
   color: white;
+  background: black;
   font-family: 'Handlee', cursive;
   font-style: bold;
   font-weight: 300px;
